Bug 1311911 - Calculate silence frames needed in the input. r=jesup a=gchang